use z-index to fix #449

--- a/src/title-pane/styles/title-pane.m.css
+++ b/src/title-pane/styles/title-pane.m.css
@@ -1,5 +1,6 @@
 .rootFixed {
 	overflow: hidden;
+	position: relative;
 	box-sizing: border-box;
 }
 
@@ -9,6 +10,11 @@
 
 .titleFixed {
 	position: relative;
+}
+
+.contentFixed {
+	position: relative;
+	z-index: -1;
 }
 
 .closeableFixed {
